--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "nuxt-socket-io",
-  "version": "2.0.0",
-  "description": "Socket.io client and server module for Nuxt. Just plug it in and GO",
+  "version": "1.0.23",
+  "description": "Socket.io module for Nuxt. Just plug it in and GO",
   "author": "Richard Schloss",
-  "type": "module",
-  "main": "lib/module.js",
-  "types": "lib/types.d.ts",
+  "main": "io/module.js",
   "license": "MIT",
   "contributors": [
     {
@@ -26,42 +24,59 @@
   "repository": "https://github.com/richardeschloss/nuxt-socket-io",
   "scripts": {
     "dev": "nuxt",
+    "dev:server": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "nuxt start",
-    "generate:local": "nuxt generate",
-    "generate:gh-pages": "cross-env nuxt generate",
+    "start": "cross-env NODE_ENV=production node server/index.js",
+    "generate:gh-pages": "cross-env DEPLOY=GH_PAGES nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "test": "ava --colors --watch --timeout=10m",
-    "test:cov": "c8 ava --timeout=10m"
+    "test": "npm run test:specs:cov && npm run test:e2e:cov",
+    "test:specs": "cross-env TEST=specs ava --config specs.config.js",
+    "test:specs:cov": "cross-env TEST=specs nyc ava --timeout=10m --config specs.config.js",
+    "test:specs:watch": "cross-env TEST=specs ava --config specs.config.js --color --watch",
+    "test:e2e": "cross-env TEST=e2e ava --config e2e.config.js",
+    "test:e2e:cov": "cross-env TEST=e2e nyc --no-clean ava --timeout=10m --config e2e.config.js",
+    "test:e2e:watch": "cross-env TEST=e2e ava --config e2e.config.js --color --watch",
+    "posttest": "rm io/plugin.compiled.js"
   },
   "files": [
-    "lib",
+    "components/SocketStatus.vue",
+    "io/module.js",
+    "io/plugin.js",
+    "test/utils.js",
     "utils"
   ],
-  "imports": {
-    "#root/*": "./*"
-  },
   "dependencies": {
-    "@nuxt/types": "^2.15.5",
-    "glob": "^7.1.7",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "tiny-emitter": "^2.1.0"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@nuxtjs/eslint-config": "^6.0.1",
-    "ava": "^3.15.0",
-    "bootstrap": "^4.6.1",
-    "browser-env": "^3.3.0",
-    "c8": "^7.10.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^25.2.2",
-    "eslint-plugin-nuxt": "^3.0.0",
-    "eslint-plugin-unicorn": "^37.0.1",
-    "jsdom": "^16.7.0",
+    "@ava/babel": "^1.0.1",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
+    "@babel/preset-env": "^7.7.7",
+    "@nuxtjs/eslint-config": "^1.0.1",
+    "@nuxtjs/eslint-module": "^1.0.0",
+    "@vue/test-utils": "^1.0.0-beta.27",
+    "ava": "^3.5.0",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0",
+    "browser-env": "^3.2.5",
+    "cross-env": "^5.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "express": "^4.16.4",
     "jsdom-global": "^3.0.2",
-    "les-utils": "^2.0.4",
-    "nuxt": "^2.15.8"
+    "nodemon": "^1.18.9",
+    "nuxt": "^2.0.0",
+    "nyc": "^14.1.1",
+    "prettier": "^1.16.4",
+    "require-extension-hooks": "^0.3.3",
+    "require-extension-hooks-babel": "^1.0.0",
+    "require-extension-hooks-vue": "^2.0.0",
+    "socket.io": "^2.3.0"
   }
 }
